[gd_scene load_steps=2 format=3 uid="uid://cosp287ap0ox3"]

[ext_resource type="Script" path="res://interactables/hint_examiner/all_hints_screen.gd" id="1_vvrbw"]

[node name="AllHintsScreen" type="CenterContainer" groups=["puzzle_receiver"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvrbw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="All" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show All"

[node name="Helpful" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Helpful only"

[node name="Unhelpful" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unhelpful only"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Hints" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Close" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/All" to="." method="_on_all_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Helpful" to="." method="_on_helpful_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Unhelpful" to="." method="_on_unhelpful_pressed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="_on_close_pressed"]
